force-app/main/default/objects/AccountContactRelation/fields/AccountSpecificEmail__c.field-meta.xml
<CustomField>
    <fullName>AccountSpecificEmail__c</fullName>
    <label>Account-specific Email</label>
    <type>Email</type>
</CustomField>