force-app/main/default/objects/AccountContactRelation/fields/AccountSpecificPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountSpecificPhoneNumber__c</fullName>
    <label>Account-specific phone number</label>
    <type>Phone</type>
</CustomField>