force-app/main/default/objects/AccountContactRelation/fields/ContactDisplayName__c.field-meta.xml
<CustomField>
    <fullName>ContactDisplayName__c</fullName>
    <formula>ContactFullName__c &amp;

IF(
    NOT(ISBLANK(ContactFunction__c)),
    &quot; | &quot; &amp; ContactFunction__c,
    &quot;&quot;
) &amp;

IF(
    NOT(ISBLANK(Roles)),
    &quot; | &quot; &amp;
    IF(INCLUDES(Roles, &quot;Decision Maker&quot;), &quot;Decision Maker; &quot;, &quot;&quot;) &amp;
    IF(INCLUDES(Roles, &quot;Buyer&quot;), &quot;Buyer; &quot;, &quot;&quot;) &amp;
    IF(INCLUDES(Roles, &quot;Technical Contact&quot;), &quot;Technical Contact; &quot;, &quot;&quot;) &amp;
    IF(INCLUDES(Roles, &quot;Influencer&quot;), &quot;Influencer; &quot;, &quot;&quot;),
    &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Display Name</label>
    <type>Text</type>
</CustomField>