force-app/main/default/objects/AccountContactRelation/fields/ContactFullName__c.field-meta.xml
<CustomField>
    <fullName>ContactFullName__c</fullName>
    <formula>Contact.FirstName &amp;&quot; &quot;&amp; Contact.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Full Name</label>
    <type>Text</type>
</CustomField>