force-app/main/default/objects/AccountContactRelation/fields/ContactFunction__c.field-meta.xml
<CustomField>
    <fullName>ContactFunction__c</fullName>
    <formula>Text(Contact.Function__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Function</label>
    <type>Text</type>
</CustomField>